add file_handling_methods.py, my_logger.py, get_offers_mapping_table method; changed swagger file
